Minor changes to `SplixBoard` and `SplixPoint`. Add test for `SplixBoard#fillPlayerCapturedArea`

--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,8 @@ dependencies {
 
 }
 
+task copyTestResources(type: Copy) {
+    from "${projectDir}/src/test/resources"
+    into "${buildDir}/classes/test"
+}
+processTestResources.dependsOn copyTestResources
