--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,10 @@ language: java
 jdk:
   - oraclejdk8
 
+sudo: false
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
 script: ./gradlew check --debug
